@@ -1,3 +1,4 @@
 $(OBJS): $(HDRS) $(ruby_headers)
 
 pack.o: pack.c $(top_srcdir)/internal.h
+mul.o: mul.c $(top_srcdir)/internal.h
